crates/php-parser/tests/fixtures/errors/invalid_missing_closing_paren_if.php
<?php
if ($x > 1 {
    echo "hello";
}